--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -189,7 +189,8 @@
                         cardOriginalTem cardGroup">
                         <!-- <a  onclick="openpartinGroup();"> -->
                         <a :href="'groupInside.php?Group_NO=' +
-                            groupCard.Group_NO + groupCard.Group_StartDate">
+                            groupCard.Group_NO + groupCard.Group_StartDate +
+                            groupCard.Group_Deadline">
                             <img :src="groupCard.Group_Pic" class="card-img-top" alt="...">
                             <div class="card-body card-img-overlay
                                 cardImgOverlayWebUse">
