--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -188,9 +188,8 @@
                     <div v-for="groupCard in groupCardsAlls" class="card
                         cardOriginalTem cardGroup">
                         <!-- <a  onclick="openpartinGroup();"> -->
-                        <a :href="'groupInside.php?Group_NO=' +
-                            groupCard.Group_NO + groupCard.Group_StartDate +
-                            groupCard.Group_Deadline">
+                        <a :href="'groupInside.php?Group_NO='
+                            + groupCard.Group_NO">
                             <img :src="groupCard.Group_Pic" class="card-img-top" alt="...">
                             <div class="card-body card-img-overlay
                                 cardImgOverlayWebUse">
