--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -16,10 +16,10 @@
     <hr />
     <div class="chooseBlock row">
 
-        <button class="groupFBtn col-3 col-md-2" onclick="sortByLatest()">
+        <button class="groupFBtn col-6 col-md-2" onclick="sortByLatest()">
             最新刊登 &darr;
         </button>
-        <button class="groupFBtn col-3 col-md-2" onclick="SortByLike()">
+        <button class="groupFBtn col-6 col-md-2" onclick="SortByLike()">
             最高評價 &darr;
         </button>
 
@@ -39,13 +39,13 @@
                 </div>
                 <div>
                     <input type="radio" name="groupView_FliterPpl_phone" id="" value="" checked>
-                    <label class="phoneFilter" for="">任意</label>
+                    <label class="phoneFilter_p_option" for="">任意</label>
                     <input type="radio" name="groupView_FliterPpl_phone" id="" value="and Group_Ppl between 1 and 10">
-                    <label class="phoneFilter" for="">1-10</label>
+                    <label class="phoneFilter_p_option" for="">1-10</label>
                     <input type="radio" name="groupView_FliterPpl_phone" id="" value="and Group_Ppl between 10 and 20">
-                    <label class="phoneFilter" for="">10-20</label>
+                    <label class="phoneFilter_p_option" for="">10-20</label>
                     <input type="radio" name="groupView_FliterPpl_phone" id="" value="and 20<Group_Ppl">
-                    <label class="phoneFilter" for="">20人以上</label>
+                    <label class="phoneFilter_p_option" for="">20人以上</label>
                 </div>
             </div>
             <div>
@@ -54,11 +54,11 @@
                 </div>
                 <div>
                     <input type="radio" name="groupView_FliterSex_phone" id="" value="" checked>
-                    <label for="">不限制</label>
+                    <label class="phoneFilter_p_option" for="">任意</label>
                     <input type="radio" name="groupView_FliterSex_phone" id="" value="and Group_Sex=1">
-                    <label for="">限男</label>
+                    <label class="phoneFilter_p_option" for="">限男</label>
                     <input type="radio" name="groupView_FliterSex_phone" id="" value="and Group_Sex=2">
-                    <label for="">限女</label>
+                    <label class="phoneFilter_p_option" for="">限女</label>
                 </div>
             </div>
             <div>
@@ -67,19 +67,19 @@
                 </div>
                 <div>
                     <input type="radio" name="groupView_FliterDay_phone" id="" value="" checked>
-                    <label for="">任意</label>
+                    <label class="phoneFilter_p_option" for="">任意</label>
                     <input type="radio" name="groupView_FliterDay_phone" id=""
                         value="and datediff(Group_EndDate,Group_StartDate)+1=1">
-                    <label for="">1</label>
+                    <label class="phoneFilter_p_option" for="">1</label>
                     <input type="radio" name="groupView_FliterDay_phone" id=""
                         value="and datediff(Group_EndDate,Group_StartDate)+1 between 1 and 5">
-                    <label for="">1-5</label>
+                    <label class="phoneFilter_p_option" for="">1-5</label>
                     <input type="radio" name="groupView_FliterDay_phone" id=""
                         value="and datediff(Group_EndDate,Group_StartDate)+1 between 5 and 10">
-                    <label for="">5-10</label>
+                    <label class="phoneFilter_p_option" for="">5-10</label>
                     <input type="radio" name="groupView_FliterDay_phone" id=""
                         value="and 10<datediff(Group_EndDate,Group_StartDate)+1">
-                    <label for="">10以上</label>
+                    <label class="phoneFilter_p_option" for="">10以上</label>
                 </div>
             </div>
             <div>
@@ -88,19 +88,19 @@
                 </div>
                 <div>
                     <input type="radio" name="groupView_FliterMonth_phone" id="" value="" checked>
-                    <label for="">任意</label>
+                    <label class="phoneFilter_p_option" for="">任意</label>
                     <input type="radio" name="groupView_FliterMonth_phone" id=""
                         value="and date_format(Group_StartDate,'%m')=01 or date_format(Group_StartDate,'%m')=02 or date_format(Group_StartDate,'%m')=03">
-                    <label for="">1-3</label>
+                    <label class="phoneFilter_p_option" for="">1-3</label>
                     <input type="radio" name="groupView_FliterMonth_phone" id=""
                         value="and date_format(Group_StartDate,'%m')=04 or date_format(Group_StartDate,'%m')=05 or date_format(Group_StartDate,'%m')=06">
-                    <label for="">4-6</label>
+                    <label class="phoneFilter_p_option" for="">4-6</label>
                     <input type="radio" name="groupView_FliterMonth_phone" id=""
                         value="and date_format(Group_StartDate,'%m')=07 or date_format(Group_StartDate,'%m')=08 or date_format(Group_StartDate,'%m')=09">
-                    <label for="">7-9</label>
+                    <label class="phoneFilter_p_option" for="">7-9</label>
                     <input type="radio" name="groupView_FliterMonth_phone" id=""
                         value="and date_format(Group_StartDate,'%m')=10 or date_format(Group_StartDate,'%m')=11 or date_format(Group_StartDate,'%m')=12">
-                    <label for="">10-12</label>
+                    <label class="phoneFilter_p_option" for="">10-12</label>
                 </div>
             </div>
             <div class="btnPhoneFilterBlock">
