--- a/dev/htmlTemplate/setupGroup.html
+++ b/dev/htmlTemplate/setupGroup.html
@@ -1,4 +1,5 @@
 <!-- <link rel="stylesheet" href="./setupGroup.css">  -->
+<!-- 
 <form class="setupform" id="groupformdata" action="" enctype="multipart/form-data">
     <div class="startgroupall" style="margin:auto;">
         <div class="startgroupa">
@@ -69,143 +70,79 @@
             </div>
         </div>
     </div>
- </form>
+ </form> 
+-->
 
- <script>
-        let setupGroup = document.getElementById("setupGroup");
-    function openNewGroup() {
-        setupGroup.style.display = "block";
-        $("body").css({
-            'overflow': 'hidden'
-        });
-        $('body').css('position', 'fixed');
-        let schedulesArray = [];
-        $.ajax({
-            type: "POST",
-            url: 'getGroupList.php',
-            success: function(response){
-                $('#grouplistSelect').html('');
-                if ($.parseJSON(response).length>0){
-                    let schedules = $.parseJSON(response);
-                    console.log(schedules);
-                    schedulesArray = schedules;
-                    $.each(schedules, function( index, value ) {
-                        $('#grouplistSelect')
-                        .append($("<option></option>")
-                        .attr("value",schedules[index].Sche_NO)
-                        .text(schedules[index].Sche_Name));
-                    });
-                    let schedele = schedulesArray[0];
-                    $('#partdate').val(schedele.Group_Deadline);
-                    $('#startdate').val(schedele.Group_StartDate);
-                    $('#enddate').val(schedele.Group_EndDate);
-                    $('#partname').val(schedele.Group_title);
-                    $('#partlimit').val(schedele.Group_Ppl);
-                    $('#gendercho').val(schedele.Group_Sex);
-                    $('#yearlimitcho').val(schedele.Group_Age);
-                    $('#estmoney').val(schedele.Group_Fee);
-                    $('#gatherplace').val(schedele.Group_Place);
-                    $('#memogroup').val(schedele.Group_Com);
-                    $('#myImg').attr('src',schedele.Group_Pic)
-                }
-            },
-            error: function (xhr, ajaxOptions, thrownError){
-                alert(xhr.status);
-                alert(thrownError);
-            }
-        });
-
-        $('#grouplistSelect').click(function () {
-            let group_no =  $('#grouplistSelect').val();
-            for (var i =0;i<schedulesArray.length;i++){
-                let schedele = schedulesArray[i];
-                if (schedele.Group_NO==group_no){
-                    $('#partdate').val(schedele.Group_Deadline);
-                    $('#startdate').val(schedele.Group_StartDate);
-                    $('#enddate').val(schedele.Group_EndDate);
-                    $('#partname').val(schedele.Group_title);
-                    $('#partlimit').val(schedele.Group_Ppl);
-                    $('#gendercho').val(schedele.Group_Sex);
-                    $('#yearlimitcho').val(schedele.Group_Age);
-                    $('#estmoney').val(schedele.Group_Fee);
-                    $('#gatherplace').val(schedele.Group_Place);
-                    $('#memogroup').val(schedele.Group_Com);
-                    $('#myImg').attr("src",schedele.Group_Pic)
-                }
-            }
-        });
-
-        /*$.ajax({
-            url: 'getGroupList.php',
-            type:'GET',
-            dataType: 'json',
-            success: function(response){
-                let schedules = response;
-                $('#grouplistSelect').html('');
-                $.each(schedules, function( index, value ) {
-                    $('#grouplistSelect').append($("<option></option>").attr("value",schedules[index].Group_NO).text(schedules[index].Group_title));
-                });
-            },
-            error: function () {
-                console.log('fail');
-            }
-        });*/
-
-    };
-
-    $(":file").change(function () {
-        if (this.files && this.files[0]) {
-            var reader = new FileReader();
-            reader.onload = imageIsLoaded;
-            reader.readAsDataURL(this.files[0]);
-        }
-    });
-    function imageIsLoaded(e) {
-        $('#myImg').attr('src', e.target.result);
-    };
-
-    function closeNewGroup() {
-        setupGroup.style.display = "none";
-        $("body").css({
-            'overflow-y': 'visible'
-        });
-        $('body').css('position', 'initial');
-    };
+ <!-- <form class="setupform"  action="<?php echo $_SERVER['PHP_SELF']; ?>" method="post" enctype="multipart/form-data"> -->
+<form class="setupform"  action="saveGroup.php" method="post" enctype="multipart/form-data">
+    <div class="startgroupall">
+        <div class="startgroupa">
+            <div class="startgtitle">開始揪團</div>
+        </div>    
+        <div class="startgroupcont">           
+            <div class="startgroupn">選擇一個行程：
+                <select name="shedulename" id="grouplistSelect" class="schedulename">
+                    <option value="1" class="set1" selected>行程一</option>
+                    <option value="2" class="set2">行程二</option>
+                    <option value="3" class="set3"> 行程三</option>
+                </select>
+            </div>
+            <div class="groupno">還沒有行程？&nbsp;&nbsp;&nbsp;
+                <a href="./plan.html" class="gotosetup">去排行程</a>
+            </div>
+            請選擇一張美麗的封面照片
+            <label for="fileupload" class="custom-file-upload">選擇照片</label>
+            <input id="fileupload" name="fileupload" type="file"/></br>
+            <img id="myImg" src="#" alt="your image" style="width:420px;height:250px" />
+            <div class="selectreq">設定參團條件</div>
+            <div class="selectreqst">
+                <div class="reqpartend">報名期限：
+                    <input id="partdate" name="Group_Deadline" type="date" style="width: 125px;height: 20px; font-size:14px;">
+                </div>
+                <div class="reqpartdep">出發日期：
+                    <input id="startdate" name="Group_StartDate" type="date" style="width: 125px;height: 20px; font-size:14px;">
+                </div>
+                <div class="reqpartend">結束日期：
+                    <input id="enddate" name="Group_EndDate" type="date" style="width: 125px;height: 20px; font-size:14px;">
+                </div>
+                <div class="reqpartname">團體名稱：
+                    <input type="text" id="partname" name="Group_title" style="font-size:14px;height: 20px; width: 125px">
+                </div>
+                <div class="reqpartlimit">參團人數：
+                    <input type="text" id="partlimit" name="Group_Ppl" style="font-size:14px;height: 20px; width: 125px">
+                </div>
+            </div>
+            <div class="selectreq2">
+                <div class="genderlimit">性別限制：
+                    <select id = "gendercho" name="Group_Sex" style="font-size:14px; width: 125px;height: 20px" class="gendselect">
+                        <option value="0" class="gendm">男</option>
+                        <option value="1" class="gendf"selected>女</option>
+                        <option value="2" class="gendnone">不限</option>
+                    </select>
+                </div>
+                <div class="yearlimit">年紀限制：
+                    <input type="text" id="yearlimitcho" name="Group_Age" style="font-size:14px;height: 20px; width: 125px" class="yearinput">
+                </div>
+                <div class="estimatecost">預估費用：
+                    <input type="text" id="estmoney" name="Group_Fee" style="font-size:14px;height: 20px; width: 125px" class="inputmoney">
+                </div>
+                <div class="estimatecost">集合地點：
+                    <input type="text" id="gatherplace" name="Group_Place" style="font-size:14px;height: 20px; width: 125px" class="inputmoney">
+                </div>
+            </div>
+            <div class="selectreq3">
+                <div class="noticetext" style="clear:both">備註：</div>
+                <div class="noticetexta"><textarea id="memogroup" name="Group_Com" class="noticetxthere"style="font-size:14px;"></textarea></div>
+                <div class="threestatus">
+                    <input type="submit" name="submitButton" id ="setgroupSubmit" class="setgroupadd" value="發佈" />
+                    <!-- <button id ="setgroupSave"class="setgroupsave">儲存</button> -->
+                    <input type="button" onclick="closeNewGroup();" class="setgroupcancel" value="取消" />
+                    <!-- <button onclick="closeNewGroup();" class="setgroupcancel">取消</button> -->
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
 
 
-    $('#setgroupSubmit').click(function() {
-        //檢查是否有上傳照片
-        if(!($('#file-upload').get(0).files.length== 0)){
-                let file_data = $('#file-upload').prop('files')[0];
-                let form_data = new FormData();
-                form_data.append('Mem_NO', userObj.Mem_NO);
-                form_data.append('Mem_Name', userObj.Mem_Name);
-                form_data.append('groupno', userObj.Mem_Name);
-                form_data.append('file', file_data);
-                $.ajax({
-                    url: "uploadGroupPic.php",
-                    type: "POST",
-                    data: form_data,
-                    contentType: false,
-                    cache: false,
-                    processData:false,
-                    success: function(data){
 
-                    }
-                });
-        }
-
-        $( "#setupform" ).submit(function (e) {
-            e.preventDefault();
-            console.log('hihi');
-        });
-        $.ajax({
-            type: "POST",
-            url: 'submission.php',
-            data: {email: email},
-            success: function(data){
-                alert(data);
-            }
-        });
-    });
- </script>
