--- a/dev/htmlTemplate/mainBlogView.html
+++ b/dev/htmlTemplate/mainBlogView.html
@@ -6,8 +6,8 @@
     </div>
     <!-- search bar -->
     <div class="blogViewSearchBar row">
-        <input type="text" placeholder="來看看有哪些遊記" class="col col-md-5" />
-        <button>
+        <input type="text" name="search_text" id="search_text" placeholder="來看看有哪些遊記" class="col col-md-5" />
+        <button type="button" id="blogSearch" class="blogSearch">
             <img src="./images/iconSearch.png" alt="" />
         </button>
     </div>
