--- a/dev/htmlTemplate/mainBlogView.html
+++ b/dev/htmlTemplate/mainBlogView.html
@@ -13,10 +13,10 @@
     </div>
     <hr>
     <div class="chooseBlock row">
-        <button class="groupFBtn col-4 col-md-2">
+        <button class="groupFBtn col-6 col-md-2">
             最新刊登 &darr;
         </button>
-        <button class="groupFBtn col-4 col-md-2">
+        <button class="groupFBtn col-6 col-md-2">
             最高評價 &darr;
         </button>
     </div>
@@ -24,8 +24,8 @@
         <div class="mainBlogCardsArea">
             <!-- 卡片區塊start -->
             <div id="blogCardsAll">
-                <div v-for="blogCard in blogCardsAlls" class="card cardOriginalTem cardBlog cardBlogOnBlogView d-none
-                d-md-block" style="width: 18rem;">
+                <div v-for="blogCard in blogCardsAlls" class="card cardOriginalTem cardBlog cardBlogOnBlogView
+                d-block" style="width: 18rem;">
                     <a href="./blogInside.html">
                         <img :src="blogCard.Blog_PicURL" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay
@@ -56,112 +56,7 @@
         </div>
 
         <!-- phone 輪播開始 -->
-        <div class="groupPhoneCardBlogCarousel d-xl-none d-lg-none d-md-none">
-            <div id="carouselPhoneGroupControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner innerBlog">
-                    <div class="carousel-item active">
-                        <div class="card cardOriginalTem cardBlog" style="width:
-                            18rem;">
-                            <a href="">
-                                <img src="./images/1.png" class="card-img-top" alt="...">
-                                <div class="card-body card-img-overlay
-                                    cardImgOverlayWebUse">
-                                    <h5 class="card-title cardTitleWebUse">遊記</h5>
-                                    <div class="mask">
-                                        <p class="card-text cardTextWebUse">日月潭<br><span
-                                                style="font-weight: 300;">九族文化村和健行步道</span>
-                                        </p>
-                                    </div>
-                                    <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                                </div>
-                                <div>
-                                    <div class="cardBlogContent">
-                                        <p>作者：中央劉德華</p>
-                                        <p>發佈日期：2020/08/20</p>
-                                        <div>
-                                            <p>人氣319</p>
-                                            <a href="">
-                                                <img src="./images/heart.png" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="card cardOriginalTem cardBlog" style="width:
-                            18rem;">
-                            <a href="">
-                                <img src="./images/1.png" class="card-img-top" alt="...">
-                                <div class="card-body card-img-overlay
-                                    cardImgOverlayWebUse">
-                                    <h5 class="card-title cardTitleWebUse">遊記</h5>
-                                    <div class="mask">
-                                        <p class="card-text cardTextWebUse">日月潭<br><span
-                                                style="font-weight: 300;">九族文化村和健行步道</span>
-                                        </p>
-                                    </div>
-                                    <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                                </div>
-                                <div>
-                                    <div class="cardBlogContent">
-                                        <p>作者：中央劉德華</p>
-                                        <p>發佈日期：2020/08/20</p>
-                                        <div>
-                                            <p>人氣319</p>
-                                            <a href="">
-                                                <img src="./images/heart.png" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="card cardOriginalTem cardBlog" style="width:
-                            18rem;">
-                            <a href="">
-                                <img src="./images/1.png" class="card-img-top" alt="...">
-                                <div class="card-body card-img-overlay
-                                    cardImgOverlayWebUse">
-                                    <h5 class="card-title cardTitleWebUse">遊記</h5>
-                                    <div class="mask">
-                                        <p class="card-text cardTextWebUse">日月潭<br><span
-                                                style="font-weight: 300;">九族文化村和健行步道</span>
-                                        </p>
-                                    </div>
-                                    <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                                </div>
-                                <div>
-                                    <div class="cardBlogContent">
-                                        <p>作者：中央劉德華</p>
-                                        <p>發佈日期：2020/08/20</p>
-                                        <div>
-                                            <p>人氣319</p>
-                                            <a href="">
-                                                <img src="./images/heart.png" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselPhoneGroupControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon groupCarouselIcon
-                        blogCarouselBTN" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselPhoneGroupControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon groupCarouselIcon
-                        blogCarouselBTN" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
+        <!-- 不要輪播了 -->
         <!-- phone 輪播結束 -->
     </div>
 
