--- a/dev/htmlTemplate/mainBlogView.html
+++ b/dev/htmlTemplate/mainBlogView.html
@@ -13,10 +13,10 @@
     </div>
     <hr>
     <div class="chooseBlock row">
-        <button class="groupFBtn col-6 col-md-2">
+        <button class="groupFBtn col-6 col-md-2" onclick="sortByLatest()">
             最新刊登 &darr;
         </button>
-        <button class="groupFBtn col-6 col-md-2">
+        <button class="groupFBtn col-6 col-md-2" onclick="SortByLike()">
             最高評價 &darr;
         </button>
     </div>
