delete btn on group view mobile

--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -26,12 +26,12 @@
         <!-- 手機版篩選器開始 -->
         <div class="d-flex mobileFilter col-3 col-md-3 col-lg-1 d-none
             d-sm-block d-md-none">
-            <div class="dropdown mr-1">
+            <!-- <div class="dropdown mr-1">
                 <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
                     篩選
                 </button>
-            </div>
+            </div> -->
         </div>
         <div class="checkBox4phone d-sm-block d-md-none col-12">
             <div>
